# anki-voice

./: .gitignore  CLAUDE.md  README.md  TODO.md  settings.gradle.kts
.github/workflows/: build-apk.yml  ci.yml
app/: build.gradle.kts
app/src/androidTest/java/dev/kiran/ankivoice/: SpikeUiTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/math/: pipeline.html  sre.js
app/src/main/java/dev/kiran/ankivoice/: MainActivity.kt
app/src/main/java/dev/kiran/ankivoice/anki/: AnkiContract.kt  AnkiRepository.kt
app/src/main/java/dev/kiran/ankivoice/math/: MathExtractor.kt  MathPipeline.kt  MathView.kt
app/src/main/java/dev/kiran/ankivoice/session/: CommandCache.kt  CommandParser.kt  CommandResolver.kt  EquationExtractor.kt  LlmCommandClassifier.kt  ReviewSession.kt
app/src/main/java/dev/kiran/ankivoice/voice/: LlmSpeechConverter.kt  (+4 more)
app/src/main/res/values/: strings.xml  themes.xml
autonomy/: README.md  anki-autonomy.service  ankiauto.service  backlog.json  config.json  config.yaml  notify.sh  pyproject.toml  state.py  supervisor.sh
autonomy/openclaw/: AGENTS-anki-autonomy.md  HEARTBEAT.md
autonomy/prompts/: fix.md  implement.md
autonomy/src/ankiauto/: __init__.py  backlog.py  ci.py  cli.py  clock.py  config.py  engine.py  git.py  health.py  logging_setup.py  models.py  notify.py  quota.py  runner.py  state.py
autonomy/tasks/: task-15-review-session.md  task-16-review-ui.md  task-llm-intent.md  task-repeat-equation.md  task-voice-vocab.md
autonomy/tests/: test_engine_fsm.py  test_quota.py  test_state_backlog.py
scripts/: ci_ui_check.sh
(+6 files in other folders)
